Fixed issue with tabbable, that contents wraps around tabs Note that the seperator for `.tabs-right` doesn't reach the bottom. The width of tab-content can't be guaranteed, so we can set `border-right`. Changed docs: put large text in tab 'Section 3'

--- a/less/navs.less
+++ b/less/navs.less
@@ -285,6 +285,13 @@
   padding: 18px 0 0 0;
 }
 
+// Make the tab content grow correctly
+.tab-content {
+  border-style: solid;
+  border-color: #ddd;
+  border-width: 0px;
+}
+
 // Remove border on bottom, left, right
 .tabs-below > .nav-tabs,
 .tabs-right > .nav-tabs,
@@ -344,6 +351,7 @@
     .border-radius(4px 4px 0 0);
   }
 }
+
 
 
 
